force-app/main/default/objects/Account/fields/AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountStatus__c</fullName>
    <description>Picklist to track status of account.
Customer - account has been shutdown, archived, etc.
Supplier/Vendor - account is no longer an existing vendor/supplier for Welco</description>
    <inlineHelpText>Active - existing customer or current supplier/vendor. In Review - currently review supplier/vendor relationship. Inactive - customer facility has shut down; no longer a current supplier/vendor</inlineHelpText>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>