force-app/main/default/objects/Account/fields/box__RelatedLeadId__c.field-meta.xml
<CustomField>
    <fullName>box__RelatedLeadId__c</fullName>
    <label>RelatedLeadId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>