force-app/main/default/objects/Account/fields/Customer_Duration__c.field-meta.xml
<CustomField>
    <fullName>Customer_Duration__c</fullName>
    <description>Calculates the time in years the account has been a customer</description>
    <formula>IF(NOT(ISBLANK( Customer_Start_Date__c )), (TODAY() - Customer_Start_Date__c) / 365, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time in years this account has been a customer based on their first order</inlineHelpText>
    <label>Customer Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>