force-app/main/default/objects/Account/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <inlineHelpText>Relates to Customer Number in Adagio</inlineHelpText>
    <label>Customer No.</label>
    <type>TextArea</type>
</CustomField>