force-app/main/default/objects/Account/fields/Days_Since_Last_Won_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Won_Opportunity__c</fullName>
    <formula>IF(
NOT(ISBLANK(Last_Won_Opportunity_Date__c )),
 TODAY()  -  Last_Won_Opportunity_Date__c ,
 NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Won Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>