force-app/main/default/objects/Account/fields/Do_not_send_mailer__c.field-meta.xml
<CustomField>
    <fullName>Do_not_send_mailer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not send future mailers to requested/unwanted or returned for reason.</description>
    <label>Do not send mailer</label>
    <type>Checkbox</type>
</CustomField>