force-app/main/default/objects/Account/fields/KARE__c.field-meta.xml
<CustomField>
    <fullName>KARE__c</fullName>
    <label>KARE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keep</fullName>
            </value>
            <value>
                <fullName>Attain</fullName>
            </value>
            <value>
                <fullName>Recapture</fullName>
            </value>
            <value>
                <fullName>Expand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>