force-app/main/default/objects/Account/fields/Last_Won_Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Won_Opportunity_Date__c</fullName>
    <label>Last Won Opportunity Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>