force-app/main/default/objects/Account/fields/MappingCity__c.field-meta.xml
<CustomField>
    <fullName>MappingCity__c</fullName>
    <formula>IF(ISBLANK(ShippingCity),BillingCity,ShippingCity)</formula>
    <label>MappingCity</label>
    <type>Text</type>
</CustomField>