force-app/main/default/objects/Account/fields/MappingCountry__c.field-meta.xml
<CustomField>
    <fullName>MappingCountry__c</fullName>
    <formula>IF(ISBLANK(ShippingCountry),BillingCountry,ShippingCountry)</formula>
    <label>MappingCountry</label>
    <type>Text</type>
</CustomField>