force-app/main/default/objects/Account/fields/MappingLatitude__c.field-meta.xml
<CustomField>
    <fullName>MappingLatitude__c</fullName>
    <label>MappingLatitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>