force-app/main/default/objects/Account/fields/MappingLongitude__c.field-meta.xml
<CustomField>
    <fullName>MappingLongitude__c</fullName>
    <label>MappingLongitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>