force-app/main/default/objects/Account/fields/MappingState__c.field-meta.xml
<CustomField>
    <fullName>MappingState__c</fullName>
    <formula>IF(ISBLANK(ShippingState),BillingState,ShippingState)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MappingState</label>
    <type>Text</type>
</CustomField>