force-app/main/default/objects/Account/fields/MappingStreet__c.field-meta.xml
<CustomField>
    <fullName>MappingStreet__c</fullName>
    <formula>IF(ISBLANK(ShippingStreet),BillingStreet,ShippingStreet)</formula>
    <label>MappingStreet</label>
    <type>Text</type>
</CustomField>