force-app/main/default/objects/Account/fields/MappingZip__c.field-meta.xml
<CustomField>
    <fullName>MappingZip__c</fullName>
    <formula>IF(ISBLANK(ShippingPostalCode),BillingPostalCode,ShippingPostalCode)</formula>
    <label>MappingZip</label>
    <type>Text</type>
</CustomField>