force-app/main/default/objects/Account/fields/MassManager__Multiselect__c.field-meta.xml
<CustomField>
    <fullName>MassManager__Multiselect__c</fullName>
    <label>Multiselect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>