force-app/main/default/objects/Account/fields/MassManager__SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>MassManager__SLAExpirationDate__c</fullName>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>