force-app/main/default/objects/Account/fields/MassManager__Text_Area__c.field-meta.xml
<CustomField>
    <fullName>MassManager__Text_Area__c</fullName>
    <label>Text Area</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>