force-app/main/default/objects/Account/fields/Most_Recently_Created_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Most_Recently_Created_Opportunity__c</fullName>
    <label>Most Recently Created Opportunity Date</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>