force-app/main/default/objects/Account/fields/Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunities__c</fullName>
    <label>Open Opportunities</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Long Term Project, Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>