force-app/main/default/objects/Account/fields/PrevOppOrder__c.field-meta.xml
<CustomField>
    <fullName>PrevOppOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for cleaning up accounts for reasons including, has existing opportunities and equipment from the past that are not in Salesforce</description>
    <label>Has Previous Opportunity/Order</label>
    <type>Checkbox</type>
</CustomField>