force-app/main/default/objects/Account/fields/Primary_Industry__c.field-meta.xml
<CustomField>
    <fullName>Primary_Industry__c</fullName>
    <description>The primary industry</description>
    <label>Primary Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggregate</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
                <label>Agriculture / Food &amp; Beverage</label>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>General Contractors</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Pulp &amp; Paper</fullName>
            </value>
            <value>
                <fullName>Recycling</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>