force-app/main/default/objects/Account/fields/Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Map</label>
    <referenceTo>pqrm__Relationship_Map__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>