force-app/main/default/objects/Account/fields/Secondary_Industry__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Industry__c</fullName>
    <label>Secondary Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Industry__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Aggregate</fullName>
            </value>
            <value>
                <fullName>Beverage</fullName>
            </value>
            <value>
                <fullName>Cannabis</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Diamonds</fullName>
            </value>
            <value>
                <fullName>Disposal</fullName>
            </value>
            <value>
                <fullName>Downstream O&amp;G</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Grain &amp; Pulse</fullName>
            </value>
            <value>
                <fullName>Graphite</fullName>
            </value>
            <value>
                <fullName>Harvesting</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Lithium</fullName>
            </value>
            <value>
                <fullName>Metal/Steel</fullName>
            </value>
            <value>
                <fullName>Metals &amp; Minerals</fullName>
            </value>
            <value>
                <fullName>Metalworking</fullName>
            </value>
            <value>
                <fullName>Midstream O&amp;G</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Moly</fullName>
            </value>
            <value>
                <fullName>Nickel</fullName>
            </value>
            <value>
                <fullName>Oilsands - In-Situ</fullName>
            </value>
            <value>
                <fullName>Oilsands - Mining</fullName>
            </value>
            <value>
                <fullName>Packagers</fullName>
            </value>
            <value>
                <fullName>Petro-Chemical</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>