force-app/main/default/objects/Account/fields/WonOppTotal__c.field-meta.xml
<CustomField>
    <fullName>WonOppTotal__c</fullName>
    <description>Total Amount from Closed Won Opportunites</description>
    <label>Total Spend</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>