force-app/main/default/objects/Account/recordTypes/Marketing_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Contacts</fullName>
    <active>true</active>
    <description>Vendors and contacts relating to Marketing</description>
    <label>Marketing Contacts</label>
</RecordType>