force-app/main/default/objects/Account/recordTypes/Representative.recordType-meta.xml
<RecordType>
    <fullName>Representative</fullName>
    <active>true</active>
    <description>Representative or Sub-Representative Account</description>
    <label>Representative</label>
</RecordType>