force-app/main/default/objects/Account/recordTypes/Supplier_Manufacturer.recordType-meta.xml
<RecordType>
    <fullName>Supplier_Manufacturer</fullName>
    <active>true</active>
    <description>Vendor, Supplier or Manufacturer Account</description>
    <label>Supplier/Manufacturer</label>
</RecordType>