force-app/main/default/objects/Account/listViews/Accounts_AC.listView-meta.xml
<ListView>
    <fullName>Accounts_AC</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>WonOppTotal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>AC</value>
    </filters>
    <label>Accounts - AC</label>
</ListView>