force-app/main/default/objects/Account/listViews/Accounts_JL.listView-meta.xml
<ListView>
    <fullName>Accounts_JL</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>WonOppTotal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>JL</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>SHUTDOWN</value>
    </filters>
    <label>Accounts - JL</label>
</ListView>