force-app/main/default/objects/Account/listViews/Accounts_MG.listView-meta.xml
<ListView>
    <fullName>Accounts_MG</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>Last_Activity_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>MG</value>
    </filters>
    <label>Accounts - MG</label>
</ListView>