force-app/main/default/objects/Account/listViews/Old_Owner_Accounts.listView-meta.xml
<ListView>
    <fullName>Old_Owner_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>WonOppTotal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>MWH,SD,PG,MT,CC,MJW,MJS</value>
    </filters>
    <label>Old Owner Accounts</label>
    <sharedTo>
        <group>Everyone</group>
    </sharedTo>
</ListView>