force-app/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>AccountStatus__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Last_Won_Opportunity_Date__c</columns>
    <columns>WonOppTotal__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>